# score-function

./: .gitignore  LICENSE  PROGRESS.md  README.md  package-lock.json  package.json  pyproject.toml  score-function.yml  tsconfig.json  vercel.json  wrangler.toml
.github/workflows/: deploy-vercel.yml  deploy-workers.yml  score-function.yml
api/score-function/: route.ts
docs/: ADOPTION.md  OBSERVABILITY.md
examples/: metrics.sample.json
score_function/: __main__.py
tests/: test_score_function.py
tools/: collect_metrics.py  score_function.py  score_function.ts
workers/: score-function.ts
