[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "score-function"
version = "1.3.0"
description = "Score Function reference implementation"
readme = "README.md"
license = { text = "CC0-1.0" }
authors = [{ name = "Score Function Maintainers" }]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
score-function = "score_function:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["score_function"]

[tool.setuptools.package-data]
score_function = ["py.typed"]
